{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 27,
  "lineage": "de99c830-4c9d-ff43-f24e-f2c2cba5c6e9",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "blobstorage_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "blob/blobstorage-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app": "blobstorage"
                },
                "name": "blobstorage-ingress",
                "namespace": "blob",
                "resource_version": "673",
                "uid": "ab4cd914-49c5-49f3-a062-8828b6bf08fb"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "blobstorage.local.lncd.pl",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "blobstorage",
                                    "port": [
                                      {
                                        "name": 0,
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.24.0.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.local_file.kubeconfig",
            "kubernetes_namespace.blob",
            "kubernetes_service_v1.blobstorage_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "jaeger_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "shared/jaeger-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app": "jaeger"
                },
                "name": "jaeger-ingress",
                "namespace": "shared",
                "resource_version": "636",
                "uid": "4b65e332-6f50-4270-a231-60e2fc7f4d96"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "jaeger.local.lncd.pl",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "jaeger-svc",
                                    "port": [
                                      {
                                        "name": 0,
                                        "number": 16686
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.24.0.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.local_file.kubeconfig",
            "kubernetes_namespace.shared",
            "kubernetes_service_v1.jaeger_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "seq_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "shared/seq-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app": "seq"
                },
                "name": "seq-ingress",
                "namespace": "shared",
                "resource_version": "646",
                "uid": "18725594-52f1-494b-9a19-e55b8f0bab43"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "seq.local.lncd.pl",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "seq-svc",
                                    "port": [
                                      {
                                        "name": 0,
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.24.0.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.local_file.kubeconfig",
            "kubernetes_namespace.shared",
            "kubernetes_service_v1.seq_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "blob",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "blob",
            "metadata": [
              {
                "generation": 0,
                "name": "blob",
                "resource_version": "612",
                "uid": "2ced1f1f-9672-4529-acd7-1dd767fa4412"
              }
            ]
          },
          "dependencies": [
            "data.local_file.kubeconfig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "exampleapp-dev",
            "metadata": [
              {
                "generation": 0,
                "name": "exampleapp-dev",
                "resource_version": "615",
                "uid": "4d785d30-fe84-4056-9c82-cc707458d8c1"
              }
            ]
          },
          "dependencies": [
            "data.local_file.kubeconfig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "shared",
            "metadata": [
              {
                "generation": 0,
                "name": "shared",
                "resource_version": "374",
                "uid": "18fff877-bdb7-4b02-827e-ebbbc3a1278a"
              }
            ]
          },
          "dependencies": [
            "data.local_file.kubeconfig",
            "null_resource.cluster",
            "null_resource.cluster_kubeconfig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "blobstorage_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "blob/blobstorage",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "blobstorage"
                },
                "name": "blobstorage",
                "namespace": "blob",
                "resource_version": "645",
                "uid": "19419357-30e2-40d2-a34d-7364ed429812"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.43.6.123",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "10000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "blobstorage"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.local_file.kubeconfig",
            "kubernetes_namespace.blob"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "jaeger_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "shared/jaeger-svc",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "jaeger"
                },
                "name": "jaeger-svc",
                "namespace": "shared",
                "resource_version": "617",
                "uid": "08c67bbc-ef1d-4908-9891-e5d0a40d8d8f"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.43.235.38",
                "health_check_node_port": 0,
                "port": [
                  {
                    "name": "collector-http",
                    "node_port": 0,
                    "port": 14268,
                    "protocol": "TCP",
                    "target_port": "14268"
                  },
                  {
                    "name": "collector-grpc",
                    "node_port": 0,
                    "port": 14250,
                    "protocol": "TCP",
                    "target_port": "14250"
                  },
                  {
                    "name": "frontend",
                    "node_port": 0,
                    "port": 16686,
                    "protocol": "TCP",
                    "target_port": "16686"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "jaeger"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.local_file.kubeconfig",
            "kubernetes_namespace.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "mssql_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "shared/mssql-svc",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "mssql"
                },
                "name": "mssql-svc",
                "namespace": "shared",
                "resource_version": "748",
                "uid": "ec3e79ec-da1b-464b-b81a-dbd418b8f49a"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.43.173.250",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 32162,
                    "port": 1433,
                    "protocol": "TCP",
                    "target_port": "1433"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "mssql"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "172.24.0.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.local_file.kubeconfig",
            "kubernetes_namespace.shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "seq_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "shared/seq-svc",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "seq"
                },
                "name": "seq-svc",
                "namespace": "shared",
                "resource_version": "613",
                "uid": "22367ad2-f2e0-4474-b083-28bf1e95c7dd"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.43.144.120",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "seq"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.local_file.kubeconfig",
            "kubernetes_namespace.shared"
          ]
        }
      ]
    }
  ]
}